Added error handling.

--- a/RqlGrammar/RqlGrammar.csproj
+++ b/RqlGrammar/RqlGrammar.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Antlr4.Runtime" Version="4.6.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FromStatement\" />
+  </ItemGroup>
+
 </Project>
