--- a/ManualTester/ManualTester.csproj
+++ b/ManualTester/ManualTester.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fastenshtein" Version="1.0.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RqlGrammar\RqlGrammar.csproj" />
   </ItemGroup>
 
